# testcontainer-rs

./: Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: build_and_test.yml
src/: container.rs  docker_client.rs  image.rs  lib.rs
tests/: integration_tests.rs
